# index-tts-2-Windows

./: .gitattributes  .gitignore  INDEX_MODEL_LICENSE_EN.txt  LICENSE  README.md  pyproject.toml  requirements.txt  webui.py
checkpoints/: config.yaml
examples/: cases.jsonl
indextts/: cli.py  infer.py  infer_v2.py
indextts/s2mel/modules/.ipynb_checkpoints/: commons-checkpoint.py  diffusion_transformer-checkpoint.py  flow_matching-checkpoint.py
indextts/utils/: front.py
tests/: padding_test.py  regression_test.py
tools/: gpu_check.py
tools/i18n/locale/: en_US.json  zh_CN.json
